kubernetes/projects/core/rook-ceph/dashboard.httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: rook-ceph-mgr-dashboard
  namespace: rook-ceph
spec:
  parentRefs:
  - name: axolotl
    namespace: istio-ingress
  hostnames:
  - ceph.lan.axolotl.cloud
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: rook-ceph-mgr-dashboard
      port: 8080
